syntax = "proto3";
package event;
option go_package = ".;pb";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "chat.proto";
import "post.proto";

message Event {
  string id = 1;
  string event_type = 2;
  string aggregate_id = 3;
  string aggregate_type = 4;
  bytes event_data = 5;
  string channel = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message RoomCreated {
  string saga_id = 1;
  chat.Room room = 2;
}

message CreateRoomFailed {
  string saga_id = 1;
  string message = 2;
}

message CreateRoom {
  string saga_id = 1;
  int64 post_id = 2 [(validate.rules).int64.gte = 1];
  int64 user_id = 3 [(validate.rules).int64.gte = 1];
}

message PostDeleted {
  post.Post post = 1;
}

message PostRejected {
  string saga_id = 1;
  post.Post post = 2;
  string error_message = 3;
}

message PostApproved {
  string saga_id = 1;
  post.Post post = 2;
}

message ApplyPostCreated {
  post.ApplyPost apply_post = 1;
}

message ApplyPostDeleted {
  post.ApplyPost apply_post = 1;
}